# mlir-toy-example

./: .gitignore  CMakeLists.txt  toyc.cpp
docker/: Dockerfile  docker-compose.yaml  gen-env.sh
example/: ex2.toy  ex4.toy
include/toy/: Dialect.h  MLIRGen.h  Passes.h  ShapeInferenceInterface.h
mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferenceInterface.td  ShapeInferencePass.cpp  ToyCombine.cpp  ToyOps.td
